# bottec_task_manager

./: README.md
backend/: .editorconfig  .env.template  .gitignore  Makefile  alembic.ini  pyproject.toml
backend/backend/: __main__.py  log.py  settings.py
backend/backend/db/: base.py  dependencies.py
backend/backend/db/migrations/: env.py
backend/backend/db/migrations/versions/: 2025-05-31-15-26_8689b441df99.py  2025-06-01-12-01_35c4c30b5183.py
backend/backend/db/models/: __init__.py  tasks.py  users.py
backend/backend/services/auth/: __init__.py  depends.py  jwt.py  password.py
backend/backend/services/db/repository/: __init__.py  tasks.py  users.py
backend/backend/services/db/service/: __init__.py  tasks.py  users.py
backend/backend/web/: application.py  lifespan.py  schemas.py
backend/backend/web/api/v1/: router.py
backend/backend/web/api/v1/auth/: __init__.py  schema.py  views.py
backend/backend/web/api/v1/tasks/: __init__.py  schema.py  views.py
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.gen.ts  schemas.gen.ts  sdk.gen.ts  transformers.gen.ts  types.gen.ts  zod.gen.ts
frontend/src/components/: Header.tsx
frontend/src/components/guards/: AuthGuard.tsx  index.ts
frontend/src/components/shared/: ConfirmModal.tsx  ModalOverlay.tsx  index.ts
frontend/src/context/AuthContext/: context.ts  hook.ts  index.ts  provider.tsx
frontend/src/features/auth/: AuthForm.tsx  RegisterForm.tsx
frontend/src/hooks/: use-debounce.ts
frontend/src/lib/: zod.ts
frontend/src/pages/: Home.tsx  Register.tsx  Tasks.tsx
(+5 files in other folders)
