[project]
name = "backend"
version = "0.1.0"
description = "Task manager project"
packages = [
  { include = "backend" }
]
authors = [
    {name = "Daniil Pavlovich",email = "layred.dota2@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "yarl (>=1.20.0,<2.0.0)"
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["crm_backend",]

[tool.mypy]
strict = true
ignore_missing_imports = true
# allow_subclassing_any = true
# allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
# allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.ruff]
lint.select = [
    "E", "F", "W", "C90", "I", "N", "D", "ANN", "S", "B", "COM", "C4", "ISC", "PIE", "T20", "TCH", "PYI", "Q", "RSE", "RET", "SLF", "SIM", "PTH", "ERA", "PL", "RUF"
]
lint.ignore = [
    "D105", "D107", "B008", "D211", "D212", "D401", "D104", "D100", "D202", "ANN401", "PLR0913", "D106", "D100"
]
exclude = ["backend/db/migrations"]
lint.mccabe = { max-complexity = 10 }
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
mypy = "^1.16.0"
black = "^25.1.0"

